--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
         <h3>Locations</h3>
       </nav>
     </header>
+    <section class="hero">
+      <div class="banner">
+        <h2>Our Mission</h2>
+        <h4>
+          Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
+          Fair Trade, Organic Tea
+        </h4>
+      </div>
+    </section>
+    <section class="teaMonth"></section>
   </body>
 </html>
