Section Tea complete

--- a/index.html
+++ b/index.html
@@ -30,6 +30,35 @@
         </h4>
       </div>
     </section>
-    <section class="teaMonth"></section>
+    <section class="teaMonth">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy?</h4>
+      <div class="container">
+        <div class="tile">
+          <img src="./resources/img-berryblitz.jpg" alt="Berry Blitz Tea" />
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <div class="tile">
+          <img src="./resources/img-spiced-rum.jpg" alt="Spiced Rum Tea" />
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="tile">
+          <img src="./resources/img-donut.jpg" alt="Seasonal Donuts" />
+          <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="tile">
+          <img src="./resources/img-myrtle-ave.jpg" alt="Myrtle Ave Tea" />
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="tile">
+          <img
+            src="./resources/img-bedford-bizarre.jpg"
+            alt="Bedfold Bizarre Tea"
+          />
+          <h4>Bedfold Bizarre Tea</h4>
+        </div>
+      </div>
+    </section>
+    
   </body>
 </html>
